es: components traslated

--- a/src/content/docs/es/tutorial/3-components/index.mdx
+++ b/src/content/docs/es/tutorial/3-components/index.mdx
@@ -1,10 +1,10 @@
 ---
 type: tutorial
-unitTitle: Build and design with Astro UI components
-title: 'Check in: Unit 3 - Components'
+unitTitle: Construcción y diseño con componentes Astro UI
+title: 'Check in: Unidad 3 - Componentes'
 description: |-
-  Tutorial: Build your first Astro blog —
-  Build Astro components to reuse code for common elements across your website
+  Tutorial: Crea tu primer blog Astro —
+  Cree componentes Astro para reutilizar el código de los elementos comunes de su sitio web.
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -14,23 +14,23 @@ import Option from '~/components/tutorial/Option.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 
 
-Now that you have `.astro` and `.md` files generating entire pages on your website, let's make and reuse smaller bits of HTML with Astro components!
+Ahora que los archivos `.astro` y `.md` generan páginas enteras en tu sitio web, ¡vamos a crear y reutilizar fragmentos más pequeños de HTML con componentes Astro!
 
-## Where are we now?
+## ¿Dónde estamos ahora?
 
 <StackblitzIntro tree="withastro/blog-tutorial-demo/tree/unit-3/start"/>
 
-## Where are we going?
+## ¿Adónde vamos?
 
-In this unit, you'll learn how to create **Astro components** to reuse code for common elements across your website. 
+En esta unidad, aprenderás a crear **componentes Astro** para reutilizar el código de los elementos comunes de tu sitio web. 
 
-You'll build:
-- A Navigation component that presents a menu of links to your pages 
-- A Footer component to include at the bottom of each page
-- A Social Media component, used in the Footer, that links to profile pages
-- An interactive Hamburger component to toggle the Navigation on mobile
+Construirás:
+- Un componente de navegación que presenta un menú de enlaces a sus páginas 
+- Un componente de pie de página para incluir en la parte inferior de cada página
+- Un componente de medios sociales, utilizado en el pie de página, que enlaza con las páginas de perfil.
+- Un componente Hamburger interactivo para alternar la navegación en el móvil
 
-Along the way, you'll use CSS and JavaScript to build a responsive design that reacts to screen sizes and user input.
+A lo largo del proceso, utilizarás CSS y JavaScript para crear un diseño adaptable que reaccione a los tamaños de pantalla y a las entradas del usuario.
 
 
 
@@ -38,6 +38,6 @@ Along the way, you'll use CSS and JavaScript to build a responsive design that r
 ## Checklist
 
 <Checklist>
-- [ ] I am ready to build some Astro components!
+- [ ] ¡Estoy listo para construir algunos componentes Astro!
 </Checklist>
 </Box>
