--- a/src/content/docs/es/tutorial/3-components/1.mdx
+++ b/src/content/docs/es/tutorial/3-components/1.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Make a reusable Navigation component
+title: Crear un componente de navegación reutilizable
 description: |-
-  Tutorial: Build your first Astro blog —
-  Replace elements repeated on multiple pages with a reusable component
+  Tutorial: Crea tu primer blog Astro —
+  Sustituir elementos repetidos en varias páginas por un componente reutilizable
 ---
 import Badge from '~/components/Badge.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
@@ -15,39 +15,39 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Now that you have the same HTML written in multiple pages of your Astro site, let's replace that duplicated content with a reusable Astro component!
+Ahora que tienes el mismo HTML escrito en varias páginas de tu sitio Astro, ¡vamos a sustituir ese contenido duplicado por un componente Astro reutilizable!
 
 <PreCheck>
-  - Create a new folder for components
-  - Build an Astro component to display your navigation links
-  - Replace existing HTML with a new, reusable navigation component
+  - Crear una nueva carpeta para los componentes
+  - Cree un componente Astro para mostrar sus enlaces de navegación
+  - Sustituya el HTML existente por un nuevo componente de navegación reutilizable
 </PreCheck>
 
-## Create a new `src/components/` folder
+## Crear una nueva carpeta `src/components/`.
 
-To hold `.astro` files that will generate HTML but that will not become new pages on your website, you will need a new folder in your project:`src/components/`. 
+Para guardar los archivos `.astro` que generarán HTML pero que no se convertirán en nuevas páginas de su sitio web, necesitará una nueva carpeta en su proyecto: `src/components/`. 
 
 
-## Create a Navigation component
+## Crear un componente de navegación
 
-1. Create a new file: `src/components/Navigation.astro`.
+1. Crea un nuevo archivo: `src/components/Navigation.astro`.
 
-2. Copy your links to navigate between pages from the top of any page and paste them into your new file, `Navigation.astro`:
+2. Copie sus enlaces para navegar entre páginas desde la parte superior de cualquier página y péguelos en su nuevo archivo, `Navigation.astro`:
 
     ```astro title="src/components/Navigation.astro" "---"
     ---
     ---
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
+    <a href="/">Inicio</a>
+    <a href="/about/">Sobre mi</a>
     <a href="/blog/">Blog</a>
     ```
     :::tip
-    If there is nothing in the frontmatter of your `.astro` file, you don't have to write the code fences. You can always add them back in when you need them.
+    Si no hay nada en el frontmatter de su archivo `.astro`, usted no tiene que escribir las cercas de código. Siempre puedes volver a añadirlas cuando las necesites.
     :::
 
-### Import and use Navigation.astro
+### Importar y utilizar Navigation.astro
 
-1. Go back to `index.astro` and import your new component inside the code fence:
+1. Vuelve a `index.astro` e importa tu nuevo componente dentro de la valla de código:
 
     ```astro title="src/pages/index.astro"
     ---
@@ -55,81 +55,81 @@ To hold `.astro` files that will generate HTML but that will not become new page
     ---
     ```
 
-2. Then below, replace the existing navigation HTML link elements with the new navigation component you just imported:
+2. A continuación, sustituya los elementos de enlace HTML de navegación existentes por el nuevo componente de navegación que acaba de importar:
 
     ```astro title="src/pages/index.astro" del={1-3} ins={4}
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
+    <a href="/">Inicio</a>
+    <a href="/about/">Sobre mi</a>
     <a href="/blog/">Blog</a>
     <Navigation />
     ```
 
-3. Check the preview in your browser and notice that it should look exactly the same... and that's what you want! 
+3. Comprueba la vista previa en tu navegador y observa que debería tener exactamente el mismo aspecto... ¡y eso es lo que quieres! 
 
-Your site contains the same HTML as it did before. But now, those three lines of code are provided by your `<Navigation />` component. 
+Su sitio contiene el mismo HTML que antes. Pero ahora, esas tres líneas de código son proporcionadas por su componente `<Navigation />`. 
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Add navigation to the rest of your site
+## Pruébelo usted mismo - Añada navegación al resto de su sitio web
 
-Import and use the `<Navigation />` component in the other two pages on your site (`about.astro` and `blog.astro`) using the same method.
+Importe y utilice el componente `<Navigation />` en las otras dos páginas de su sitio (`about.astro` y `blog.astro`) utilizando el mismo método.
 
-Don't forget to
-- Add an import statement at the top of the component script, inside the code fence.
-- Replace the existing code with the navigation component.
+No olvide
+- Añade una sentencia import en la parte superior del script del componente, dentro de la valla de código.
+- Sustituya el código existente por el componente de navegación.
 
 </Box>
 
-:::note
-When you restructure your code but do not change the way your page looks in the browser, you are **refactoring**. You will **refactor** several times in this unit as you replace parts of your page HTML with components. 
+:::nota
+Cuando reestructuras tu código pero no cambias el aspecto de tu página en el navegador, estás **refactorizando**. En esta unidad **refactorizarás** varias veces a medida que reemplaces partes del HTML de tu página por componentes. 
 
-This allows you to get started quickly with any working code, often duplicated throughout your project. Then, you can improve your existing code's design incrementally without changing the outward appearance of your site.
+Esto le permite empezar rápidamente con cualquier código de trabajo, a menudo duplicado a lo largo de su proyecto. A continuación, puede mejorar el diseño de su código existente de forma incremental sin cambiar la apariencia externa de su sitio.
 :::
 
 
 
 <Box icon="check-list">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
 
 
-1. You can do this when you have elements repeated on multiple pages:
+1. Puede hacerlo cuando tenga elementos repetidos en varias páginas:
     <MultipleChoice>
       <Option>
-        restart the dev server
+        reiniciar el servidor dev
       </Option>
       <Option isCorrect>
-        refactor to use a reusable component
+        refactorizar para utilizar un componente reutilizable
       </Option>
       <Option>
-        make a new page
+        crear una nueva página
       </Option>
     </MultipleChoice>
 
-2. Astro components are:
+2. Los componentes Astro son:
     <MultipleChoice>
       <Option>
-        reusable
+        reutilizable
       </Option>
       <Option>
-        fragments of HTML
+        fragmentos de HTML
       </Option>
       <Option isCorrect>
-        both of the above!
+        ambas cosas.
       </Option>
     </MultipleChoice>
 
-3. Astro components will automatically create a new page on your site when you...
+3. Los componentes Astro crearán automáticamente una nueva página en su sitio...
     <MultipleChoice>
       <Option>
-        include `<html></html>`
+        incluir `<html></html>`
       </Option>
       <Option>
-        refactor
+        refactorizar
       </Option>
       <Option isCorrect>
-        put the `.astro` file within `src/pages/`
+        poner el fichero `.astro` dentro de `src/pages/`
       </Option>
     </MultipleChoice>
 </Box>
@@ -139,14 +139,14 @@ This allows you to get started quickly with any working code, often duplicated t
 ## Checklist
 
 <Checklist>
-- [ ] I can refactor content into reusable components.
-- [ ] I can add a new component to an `.astro` page.
+- [ ] Puedo refactorizar contenidos en componentes reutilizables.
+- [ ] Puedo añadir un nuevo componente a una página `.astro`.
 </Checklist>
 
 </Box>
 
-### Resources 
+### Recursos
 
-- [Astro Component Overview](/en/core-concepts/astro-components/#component-structure)
+- [Visión general de los componentes Astro](/en/core-concepts/astro-components/#component-structure)
 
-- [Refactoring](https://refactoring.com/) <Badge>external</Badge>
+- [Refactorización](https://refactoring.com/) <Badge>externo</Badge>
