--- a/src/content/docs/es/tutorial/3-components/2.mdx
+++ b/src/content/docs/es/tutorial/3-components/2.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Create a social media footer
+title: Crear un pie de página para redes sociales
 description: |-
-  Tutorial: Build your first Astro blog —
-  Build a new component from scratch, then add it to your pages
+  Tutorial: Crea tu primer blog Astro —
+  Cree un nuevo componente desde cero y añádalo a sus páginas
 ---
 import Checklist from '~/components/Checklist.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -14,17 +14,17 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Create a Footer component
-  - Create and pass props to a Social Media component
+  - Crear un componente de pie de página
+  - Crear y pasar props a un componente de medios sociales
 </PreCheck>
 
-Now that you have used Astro components on a page, let's use a component within another component!
+Ahora que ya has utilizado componentes Astro en una página, vamos a utilizar un componente dentro de otro componente.
 
-## Create a Footer Component
+## Crear un componente de pie de página
 
-1. Create a new file at the location `src/components/Footer.astro`.
+1. Crea un nuevo archivo en la ubicación `src/components/Footer.astro`.
 
-2. Copy the following code into your new file, `Footer.astro`.
+2. Copie el siguiente código en su nuevo archivo, `Footer.astro`.
 
     ```astro title="src/components/Footer.astro"
     ---
@@ -33,19 +33,19 @@ Now that you have used Astro components on a page, let's use a component within 
     ---
 
     <footer>
-      <p>Learn more about my projects on <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+      <p>Más información sobre mis proyectos en <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
     </footer>
     ```
 
-### Import and use `Footer.astro`
+### Importar y utilizar `Footer.astro`
 
-1. Add the following import statement to the frontmatter in each of your three Astro pages (`index.astro`, `about.astro`, and `blog.astro`):
+1. Añade la siguiente sentencia import al frontmatter de cada una de tus tres páginas Astro (`index.astro`, `about.astro`, y `blog.astro`):
 
     ```js
     import Footer from '../components/Footer.astro';
     ```
 
-2. Add a new `<Footer />` component in your Astro template on each page, just before the closing `</body>` tag to display your footer at the bottom of the page. 
+2. Añade un nuevo componente `<Footer />` en tu plantilla Astro en cada página, justo antes de la etiqueta de cierre `</body>` para mostrar tu pie de página en la parte inferior de la página. 
 
     ```astro ins={1}
        <Footer />
@@ -53,18 +53,18 @@ Now that you have used Astro components on a page, let's use a component within 
     </html>
     ```
 
-3. In your browser preview, check that you can see your new footer text on each page.
+3. En la vista previa de su navegador, compruebe que puede ver el nuevo texto del pie de página en cada página.
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Personalize your footer
+## Pruébelo usted mismo - Personalice su pie de página
 
-Customize your footer to display multiple social networks (e.g. Instagram, Twitter, LinkedIn) and include your username to link directly to your own profile.
+Personaliza tu pie de página para mostrar varias redes sociales (por ejemplo, Instagram, Twitter, LinkedIn) e incluye tu nombre de usuario para enlazar directamente con tu propio perfil.
 
 </Box>
 
-### Code Check-In
-If you've been following along with each step in the tutorial, your `index.astro` file should look like this:
+### Registro de códigos
+Si has seguido cada paso del tutorial, tu archivo `index.astro` debería tener este aspecto:
 
 ```astro title="src/pages/index.astro"
 ---
@@ -72,7 +72,7 @@ import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
-const pageTitle = 'Home Page';
+const pageTitle = 'Página de inicio';
 ---
 
 <html lang="en">
@@ -91,13 +91,13 @@ const pageTitle = 'Home Page';
 </html>
 ```
 
-## Create a Social Media component
+## Crear un componente de medios sociales
 
-Since you might have multiple online accounts you can link to, you can make a single, reusable component and display it multiple times. Each time, you will pass it different properties (`props`) to use: the online platform and your username there.
+Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un único componente reutilizable y mostrarlo varias veces. Cada vez, le pasarás diferentes propiedades (`props`) para que las use: la plataforma online y tu nombre de usuario allí.
 
-1. Create a new file at the location `src/components/Social.astro`.
+1. Crea un nuevo archivo en la ubicación `src/components/Social.astro`.
 
-2. Copy the following code into your new file, `Social.astro`.
+2. Copia el siguiente código en tu nuevo archivo, `Social.astro`.
 
     ```astro title="src/components/Social.astro"
     ---
@@ -106,9 +106,9 @@ Since you might have multiple online accounts you can link to, you can make a si
     <a href={`https://www.${platform}.com/${username}`}>{platform}</a>
     ```
 
-### Import and use `Social.astro` in your Footer
+### Importar y utilizar `Social.astro` en el pie de página
 
-1. Change the code in `src/components/Footer.astro` to import, then use this new component three times, passing different **component attributes** as props each time:
+1. Cambia el código en `src/components/Footer.astro` para importar, luego usa este nuevo componente tres veces, pasando diferentes **atributos de componente** como props cada vez:
 
     ```astro title="src/components/Footer.astro" del={2,3,8} ins={4,9-11}
     ---
@@ -118,18 +118,18 @@ Since you might have multiple online accounts you can link to, you can make a si
     ---
 
     <footer>
-      <p>Learn more about my projects on <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+      <p>Más información sobre mis proyectos en <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
       <Social platform="twitter" username="astrodotbuild" />
       <Social platform="github" username="withastro" />
       <Social platform="youtube" username="astrodotbuild" />
     </footer>
     ```
 
-2. Check your browser preview, and you should see your new footer displaying links to these three platforms on each page.
+2. Compruebe la vista previa de su navegador, y debería ver su nuevo pie de página mostrando enlaces a estas tres plataformas en cada página.
 
-## Style your Social Media Component
+## Estiliza tu componente de redes sociales
 
-1. Customize the appearance of your links by adding a `<style>` tag to `src/components/Social.astro`.
+1. Personaliza la apariencia de tus enlaces añadiendo una etiqueta `<style>` a `src/components/Social.astro`.
 
     ```astro title="src/components/Social.astro" ins={6-17} 'class="social-platform'
     ---
@@ -147,7 +147,7 @@ Since you might have multiple online accounts you can link to, you can make a si
     </style>
     ```
 
-2. Add a `<style>` tag to `src/components/Footer.astro` to improve the layout of its contents.
+2. Añade una etiqueta `<style>` a `src/components/Footer.astro` para mejorar el layout de su contenido.
 
     ```astro title="src/components/Footer.astro" ins={4-10}
     ---
@@ -168,13 +168,13 @@ Since you might have multiple online accounts you can link to, you can make a si
     </footer>
     ```
 
-3. Check your browser preview again and confirm that each page shows an updated footer.
+3. Compruebe de nuevo la vista previa de su navegador y confirme que cada página muestra un pie de página actualizado.
 
 <Box icon="question-mark">
 
-### Test Yourself
+### Ponte a prueba
 
-1. What line of code do you need to write in an Astro component's frontmatter to receive values of `title`, `author`, and `date` as props?
+1. ¿Qué línea de código hay que escribir en el frontmatter de un componente Astro para recibir los valores de `title`, `author` y `date` como props?
 
     <MultipleChoice>
       <Option isCorrect>
@@ -184,12 +184,12 @@ Since you might have multiple online accounts you can link to, you can make a si
         `import BlogPost from '../components/BlogPost.astro`
       </Option>
       <Option>
-        `<BlogPost title="My First Post" author="Dan" date="12 Aug 2022" />`
+        `<BlogPost title="Mi primer post" author="Juan" date="12 Aug 2022" />`
       </Option>
     </MultipleChoice>
     
 
-2. How do you **pass values as props** to an Astro component?
+2. ¿Cómo **pasar valores como props** a un componente Astro?
     <MultipleChoice>
       <Option>
         `const { title, author, date } = Astro.props;`
@@ -198,7 +198,7 @@ Since you might have multiple online accounts you can link to, you can make a si
         `import BlogPost from '../components/BlogPost.astro`
       </Option>
       <Option isCorrect>
-        `<BlogPost title="My First Post" author="Dan" date="12 Aug 2022" />`
+        `<BlogPost title="Mi primer post" author="Juan" date="12 Aug 2022" />`
       </Option>
     </MultipleChoice>
 </Box>
@@ -210,12 +210,12 @@ Since you might have multiple online accounts you can link to, you can make a si
 ## Checklist
 
 <Checklist>
-- [ ] I can create new `.astro` components in `src/components/`
-- [ ] I can import and use Astro components inside other Astro components.
-- [ ] I can pass props to an Astro component.
+- [ ] Puedo crear nuevos componentes `.astro` en `src/components/`.
+- [ ] Puedo importar y utilizar componentes Astro dentro de otros componentes Astro.
+- [ ] Puedo pasar props a un componente Astro.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Component Props in Astro](/en/core-concepts/astro-components/#component-props)
+- [Componentes props en Astro](/en/core-concepts/astro-components/#component-props)
