--- a/src/content/docs/es/tutorial/3-components/3.mdx
+++ b/src/content/docs/es/tutorial/3-components/3.mdx
@@ -1,10 +1,10 @@
 ---
 type: tutorial
-title: Build it yourself - Header
+title: Constrúyalo usted mismo - Header
 description: >-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Crea tu primer blog Astro —
 
-  Use everything you've learned so far to build a header with responsive
+  Utiliza todo lo que has aprendido hasta ahora para construir un header con responsive
   navigation
 ---
 import Badge from '~/components/Badge.astro';
@@ -15,22 +15,22 @@ import Option from '~/components/tutorial/Option.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
-Since your site will be viewed on different devices, let's create a page navigation that can respond to multiple screen sizes!
+Dado que su sitio se verá en distintos dispositivos, creemos una navegación de página que pueda responder a múltiples tamaños de pantalla.
 
 <PreCheck>
-  - Create a Header for your site that contains the Navigation component
-  - Make the Navigation component responsive
+  - Cree un header para su sitio que contenga el componente de navegación
+  - Hacer que el componente de navegación sea responsive
 </PreCheck>
 
 
 <Box icon="puzzle-piece">
 
-## Try it yourself - Build a new Header component
+## Pruébelo usted mismo - Cree un nuevo componente Header
 
-1. Create a new Header component. Import and use your existing `Navigation.astro` component inside a `<nav>` element which is inside a `<header>` element.
+1. Cree un nuevo componente header. Importe y utilice su componente existente `Navigation.astro` dentro de un elemento `<nav>` que esté dentro de un elemento `<header>`.
 
     <details>
-    <summary>Show me the code!</summary>
+    <summary>¡Enséñame el código!</summary>
 
     Create a file named `Header.astro` in `src/components/`
      ```astro title="src/components/Header.astro"
@@ -53,12 +53,12 @@ Since your site will be viewed on different devices, let's create a page navigat
 
 <Box icon="check-list">
 
-## Try it yourself - Update your pages
+## Pruébelo usted mismo - Actualice sus páginas
 
-1. On each page, replace your existing `<Navigation/>` component with your new header.
+1. En cada página, sustituya el componente `<Navigation/>` existente por su nuevo header.
 
     <details>
-    <summary>Show me the code!</summary>
+    <summary>¡Enséñame el código!</summary>
 
     ```astro title="src/pages/index.astro" ins={3,18} del={2,17}
     ---
@@ -86,32 +86,32 @@ Since your site will be viewed on different devices, let's create a page navigat
     ```
     </details>
 
-2. Check your browser preview and verify that your header is displayed on every page. It won't look different yet, but if you inspect your preview using dev tools, you will see that you now have elements like `<header>` and `<nav>` around your navigation links.
+2. Comprueba la vista previa de tu navegador y verifica que tu header se muestra en todas las páginas. Todavía no se verá diferente, pero si inspeccionas la vista previa con las herramientas de desarrollo, verás que ahora tienes elementos como `<header>` y `<nav>` alrededor de los enlaces de navegación.
 
 </Box>
 
-## Add responsive styles
+## Añadir estilos responsive
 
-1. Update `Navigation.astro` with the CSS class to control your navigation links. Wrap the existing navigation links in a `<div>` with the class `nav-links`.
+1. Actualiza `Navigation.astro` con la clase CSS para controlar tus enlaces de navegación. Envuelve los enlaces de navegación existentes en un `<div>` con la clase `nav-links`.
 
     ```astro title="src/components/Navigation.astro" ins={3,7}
     ---
     ---
     <div class="nav-links">
-      <a href="/">Home</a>
-      <a href="/about">About</a>
+      <a href="/">Inicio</a>
+      <a href="/about">Sobre mi</a>
       <a href="/blog">Blog</a>
     </div>
     ```
 
-2. Copy the CSS styles below into `global.css`. These styles:
+2. Copie los siguientes estilos CSS en `global.css`. Estos estilos:
 
-    - Style and position the navigation links for mobile
-    - Include an `expanded` class that can be toggled to display or hide the links on mobile
-    - Use a `@media` query to define different styles for larger screen sizes
+    - Estilo y posición de los enlaces de navegación para móviles
+    - Incluir una clase `expanded` que pueda activarse para mostrar u ocultar los enlaces en móviles.
+    - Utilice `@media` queries para definir estilos diferentes para tamaños de pantalla mayores.
 
-    :::tip[mobile-first design]
-    Start by defining what should happen on small screen sizes first! Smaller screen sizes require simpler layouts. Then, adjust your styles to accommodate larger devices. If you design the complicated case first, then you have to work to try to make it simple again.
+    :::tip[diseño mobile-first]
+    Empiece por definir qué debe ocurrir en las pantallas pequeñas. Las pantallas pequeñas requieren layouts más sencillos. A continuación, ajuste sus estilos para adaptarse a dispositivos más grandes. Si diseñas primero el caso complicado, luego tendrás que trabajar para intentar hacerlo sencillo de nuevo.
     :::
 
     ```css title="src/styles/global.css" ins={23-100}
@@ -183,7 +183,7 @@ Since your site will be viewed on different devices, let's create a page navigat
     }
     ```
 
-Resize your window and look for different styles being applied at different screen widths. Your header is now **responsive** to screen size through the use of `@media` queries.
+Cambie el tamaño de la ventana y compruebe si se aplican diferentes estilos a diferentes anchos de pantalla. Su header es ahora **responsive** al tamaño de la pantalla mediante el uso de `@media` queries.
 
 
 
@@ -192,14 +192,14 @@ Resize your window and look for different styles being applied at different scre
 ## Checklist
 
 <Checklist>
-- [ ] I can use CSS to add responsive elements to my site.
+- [ ] Puedo utilizar CSS para añadir elementos responsive a mi sitio.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Component-based Design](https://www.droptica.com/blog/component-based-design/) <Badge>external</Badge>
+- [Diseño basado en componentes](https://www.droptica.com/blog/component-based-design/) <Badge>externo</Badge>
 
-- [Semantic HTML Tags](https://www.dofactory.com/html/semantics) <Badge>external</Badge>
+- [Etiquetas HTML semánticas](https://www.dofactory.com/html/semantics) <Badge>externo</Badge>
 
-- [Mobile-first Design](https://www.mobileapps.com/blog/mobile-first-design) <Badge>external</Badge>
+- [Diseño Mobile-first](https://www.mobileapps.com/blog/mobile-first-design) <Badge>externo</Badge>
