--- a/src/content/docs/es/tutorial/3-components/4.mdx
+++ b/src/content/docs/es/tutorial/3-components/4.mdx
@@ -1,11 +1,10 @@
 ---
 type: tutorial
-title: Send your first script to the browser
+title: Envíe su primer script al navegador
 description: >-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Crea tu primer blog Astro —
 
-  Add client-side interactivity to your mobile navigation with an Astro script
-  tag
+  Añada interactividad del lado del cliente a su navegación móvil con un script Astro
 ---
 import Badge from '~/components/Badge.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
@@ -16,22 +15,22 @@ import Option from '~/components/tutorial/Option.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
-Let's add a hamburger menu to open and close your links on mobile screen sizes, requiring some client-side interactivity!
+Añadamos un menú hamburguesa para abrir y cerrar los enlaces en pantallas de dispositivos móviles, lo que requiere cierta interactividad con el cliente.
 
 <PreCheck>
-  - Create a hamburger menu component
-  - Write a `<script>` to allow your site visitors to open and close the navigation menu
-  - Move your JavaScript to its `.js` file
+  - Crear un componente de menú de hamburguesa
+  - Escriba un `<script>` para que los visitantes de su sitio puedan abrir y cerrar el menú de navegación
+  - Mueva su JavaScript a su archivo `.js`.
 </PreCheck>
 
-## Build a Hamburger component
+## Construir un hamburger component
 
-Create a `<Hamburger />` component to open and close your mobile menu.
+Cree un componente `<Hamburger />` para abrir y cerrar su menú móvil.
 
-1. Create a file named `Hamburger.astro` in `src/components/`
+1. Crea un archivo llamado `Hamburger.astro` en `src/components/`.
   
 
-2. Copy the following code into your component. This will represent your 3-line "hamburger" menu to open and close your navigation links on mobile. (You will add the new CSS styles to `global.css` later.)
+2. Copie el siguiente código en su componente. Esto representará tu menú "hamburguesa" de 3 líneas para abrir y cerrar tus enlaces de navegación en móvil. (Añadirás los nuevos estilos CSS a `global.css` más tarde).
 
     ```astro title="src/components/Hamburger.astro"
     --- 
@@ -43,10 +42,10 @@ Create a `<Hamburger />` component to open and close your mobile menu.
     </div>
     ```
 
-3. Place this new `<Hamburger />` component just before your `<Navigation />` component in `Header.astro`. 
+3. Coloque este nuevo componente `<Hamburger />` justo antes de su componente `<Navigation />` en `Header.astro`. 
 
 <details>
-<summary>Show me the code!</summary>
+<summary>¡Enséñame el código!</summary>
 
 ```astro title="src/components/Header.astro" ins={2,7}
 ---
@@ -62,7 +61,7 @@ import Navigation from './Navigation.astro';
 ```
 </details>
 
-4. Add the following styles for your Hamburger component:
+4. Añada los siguientes estilos para su componente Hamburger:
 
   ```css title="src/styles/global.css" ins={2-13, 56-58}
   /* nav styles */
@@ -127,13 +126,13 @@ import Navigation from './Navigation.astro';
   ```
 
 
-## Write your first script tag
+## Escriba su primera etiqueta de script
 
-Your header is not yet **interactive** because it can't respond to user input, like clicking on the hamburger menu to show or hide the navigation links. 
+Tu header aún no es **interactivo** porque no puede responder a la entrada del usuario, como hacer clic en el menú hamburguesa para mostrar u ocultar los enlaces de navegación. 
 
-Adding a `<script>` tag provides client-side JavaScript to "listen" for a user event and then respond accordingly.
+La adición de una etiqueta `<script>` proporciona JavaScript del lado del cliente para "escuchar" un evento del usuario y luego responder en consecuencia
 
-1. Add the following `<script>` tag to `index.astro`, just before the closing `</body>` tag.
+1. Añade la siguiente etiqueta `<script>` a `index.astro`, justo antes de la etiqueta de cierre `</body>`.
 
     ```astro title="src/pages/index.astro" ins={2-6}
       <Footer />
@@ -145,14 +144,14 @@ Adding a `<script>` tag provides client-side JavaScript to "listen" for a user e
     </body>
     ```
 
-2. Check your browser preview again at various sizes, and verify that you have a working navigation menu that is both responsive to screen size and responds to user input on this page.
+2. Compruebe de nuevo la vista previa del navegador en varios tamaños y verifique que el menú de navegación funciona, que es responsive al tamaño de la pantalla y que responde a las entradas del usuario en esta página.
 
-### Importing a `.js` file
+### Importar un archivo `.js
 
-Instead of writing your JavaScript directly on each page, you can move the contents of your `<script>` tag into its own `.js` file in your project.
+En lugar de escribir JavaScript directamente en cada página, puede mover el contenido de la etiqueta `<script>` a su propio archivo `.js` en el proyecto.
 
 
-1. Create `src/scripts/menu.js` (you will have to create a new `/scripts/` folder) and move your JavaScript into it.
+1. Crea `src/scripts/menu.js` (tendrás que crear una nueva carpeta `/scripts/`) y mueve tu JavaScript a ella.
 
     ```js title="src/scripts/menu.js"
     document.querySelector('.hamburger').addEventListener('click', () => {
@@ -160,7 +159,7 @@ Instead of writing your JavaScript directly on each page, you can move the conte
     });
     ```
 
-2. Replace the contents of the `<script>` tag on `index.astro` with the following file import:
+2. Sustituya el contenido de la etiqueta `<script>` en `index.astro` por la siguiente importación de archivos:
 
     ```astro title="src/pages/index.astro" ins={7} del={3-5}
       <Footer />
@@ -174,10 +173,10 @@ Instead of writing your JavaScript directly on each page, you can move the conte
     </body>
     ```
 
-3. Check your browser preview again at a smaller size and verify that the hamburger menu still opens and closes your navigation links. 
+3. Compruebe de nuevo la vista previa del navegador a un tamaño más pequeño y verifique que el menú hamburguesa sigue abriendo y cerrando los enlaces de navegación. 
 
 
-4. Add the same `<script>` with import to your other two pages, `about.astro` and `blog.astro` and verify that you have a responsive, interactive header on each page.
+4. Añade el mismo `<script>` con import a tus otras dos páginas, `about.astro` y `blog.astro` y comprueba que tienes un header responsive e interactivo en cada página.
 
      ```astro title="src/pages/about.astro & src/pages/blog.astro" ins={2-4}
       <Footer />
@@ -187,60 +186,60 @@ Instead of writing your JavaScript directly on each page, you can move the conte
     </body>
     ```
 
-:::note[takeaway]
-You had previously used some JavaScript to build parts of your site:
+:::nota[takeaway]
+Anteriormente había utilizado JavaScript para construir partes de su sitio:
 
-- Defining your page title and heading dynamically
-- Mapping through a list of skills on the About page
-- Conditionally displaying HTML elements
+- Definir dinámicamente el título y la cabecera de la página
+- Mapeo a través de una lista de competencias en la página Acerca de
+- Visualización condicional de elementos HTML
 
-Those commands are all executed at build time to create static HTML for your site, and then the code is "thrown away." 
+Todos esos comandos se ejecutan en tiempo de compilación para crear HTML estático para su sitio, y luego el código se "tira". 
 
-**The JavaScript in a `<script>` tag is sent to the browser**, and is available to run, based on user interactions like refreshing a page or toggling an input.
+**El JavaScript de una etiqueta `<script>` se envía al navegador** y está disponible para ejecutarse en función de las interacciones del usuario, como actualizar una página o cambiar una entrada.
 :::
 
 
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-1. When does Astro run any JavaScript written in a component's frontmatter?
+1. ¿Cuándo ejecuta Astro cualquier JavaScript escrito en el frontmatter de un componente?
     <MultipleChoice>
       <Option>
-       Astro never runs JavaScript
+       Astro nunca ejecuta JavaScript
       </Option>
       <Option isCorrect>
-        at build-time
+        en tiempo de compilación
       </Option>
       <Option>
-         When a visitor clicks a button
+         Cuando un visitante pulsa un botón
       </Option>
     </MultipleChoice>
 
-2. Optionally, Astro can send JavaScript to the browser to allow:
+2. Opcionalmente, Astro puede enviar JavaScript al navegador para permitir:
     <MultipleChoice>
       <Option>
-        users to click page links
+        que los usuarios hagan clic en los enlaces de las páginas
       </Option>
       <Option>
-        faster load times
+        tiempos de carga más rápidos
       </Option>
       <Option isCorrect>
-        client-side interactivity
+        interactividad del lado del cliente
       </Option>
     </MultipleChoice>
 
-3. The client-side JavaScript will be sent to a user’s browser when it is written or imported:
+3. El JavaScript del lado del cliente se enviará al navegador del usuario cuando se escriba o importe:
     <MultipleChoice>
       <Option isCorrect>
-        in `<script>` tags
+        en etiquetas `<script>`.
       </Option>
       <Option>
-        between a `.astro` file's code fences
+        entre las vallas de código de un archivo `.astro`.
       </Option>
       <Option>
-        in `global.css`
+        en `global.css`
       </Option>
     </MultipleChoice>
 
@@ -251,12 +250,12 @@ Those commands are all executed at build time to create static HTML for your sit
 ## Checklist
 
 <Checklist>
-- [ ] I can add client-side interactivity with JavaScript in a `<script>` tag.
-- [ ] I can import a `.js` file into a `<script>` tag.
+- [ ] Puedo añadir interactividad del lado del cliente con JavaScript en una etiqueta `<script>`.
+- [ ] Puedo importar un archivo `.js` en una etiqueta `<script>`.
 </Checklist>
 
 </Box>
 
-### Resources
+### Recursos
 
-[Client-side scripts in Astro](/en/guides/client-side-scripts/)
+[Scripts del lado del cliente en Astro](/en/guides/client-side-scripts/)
