--- a/src/content/docs/en/recipes/docker.mdx
+++ b/src/content/docs/en/recipes/docker.mdx
@@ -20,7 +20,7 @@ Create a file called `Dockerfile` in your project's root directory. This file co
 
 ### SSR
 
-This Dockerfile will build your site and serve it using Node.js on port `3000`. It requires the [Node adapter](/en/guides/integrations-guide/node/).
+This Dockerfile will build your site and serve it using Node.js on port `3000` and therefore requires the [Node adapter](/en/guides/integrations-guide/node/) installed in your Astro project.
 
 ```docker title="Dockerfile"
 FROM node:lts AS runtime
