pass metadata as src, per Erika

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -145,7 +145,7 @@ To avoid errors in your project, complete the following steps:
 
 ### Update content collections schemas
 
-You can now declare images in your frontmatter as their paths relative to the `src/assets/` folder. The image will be imported and transformed into metadata that matches the signature of imported images, allowing you to pass its properties directly to the `<Image />` component or the `getImage()` function.
+You can now declare images in your frontmatter as their paths relative to the `src/assets/` folder. The image will be imported and transformed into metadata that matches the signature of imported images, allowing you to pass it as a `src` to <Image/> or `getImage()`.
 
 A new `image` helper for content collections lets you validate the image metadata using Zod.
 
