--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -145,7 +145,17 @@ To avoid errors in your project, complete the following steps:
 
 ### Update content collections schemas
 
-You can now declare images in your frontmatter as their paths relative to the `src/assets/` folder. The image will be imported and transformed into metadata that matches the signature of imported images, allowing you to pass it as a `src` to <Image/> or `getImage()`.
+You can now declare images in your frontmatter as their paths relative to the `src/assets/` folder. 
+
+```md title="src/content/blog/my-post.md"
+---
+title: "My first blog post"
+cover: "firstpostcover.jpeg" # will resolve to "src/assets/firstblogcover.jpeg"
+coverAlt: "A photograph of a sunset behind a mountain range"
+---
+
+This is a blog post
+```
 
 A new `image` helper for content collections lets you validate the image metadata using Zod.
 
@@ -168,16 +178,7 @@ export const collections = {
 };
 ```
 
-```md title="src/content/blog/my-post.md"
----
-title: "My first blog post"
-cover: "firstpostcover.jpeg" # will resolve to "src/assets/firstblogcover.jpeg"
-coverAlt: "A photograph of a sunset behind a mountain range"
----
-
-This is a blog post
-```
-A blog index page might render the cover photo and title of each blog post. This example destructures the image metadata as props to `<Image/>`:
+The image will be imported and transformed into metadata that matches the signature of imported images, allowing you to pass it as a `src` to `<Image/>` or `getImage()`. A blog index page might render the cover photo and title of each blog post:
 
 ```astro title="src/pages/blog.astro" {10}
 ---
@@ -189,7 +190,7 @@ const allBlogPosts = await getCollection("blog");
 {
 	allBlogPosts.map((post) => (
 		<div>
-			<Image {...post.data.cover} alt={post.data.coverAlt} />
+			<Image src={post.data.cover} alt={post.data.coverAlt} />
 			<h2>
 				<a href={"/blog/" + post.slug}>{post.data.title}</a>
 			</h2>
