i18n(de): translate deno.mdx

--- a/src/content/docs/de/guides/deploy/aws.mdx
+++ b/src/content/docs/de/guides/deploy/aws.mdx
@@ -1,11 +1,11 @@
 ---
-title: Veröffentliche deine Astro-Site auf AWS
+title: Veröffentliche deine Astro-Seite auf AWS
 description: Wie du deine Astro-Website mit AWS im Internet bereitstellst.
 type: deploy
 i18nReady: true
 ---
 
-[AWS] (https://aws.amazon.com/) ist eine umfangreiche Web-App-Hosting-Plattform, die für die Bereitstellung einer Astro-Site verwendet werden kann.
+[AWS] (https://aws.amazon.com/) ist eine umfangreiche Web-App-Hosting-Plattform, die für die Bereitstellung einer Astro-Seite verwendet werden kann.
 
 Für die Bereitstellung deines Projekts bei AWS musst du die [AWS-Konsole](https://aws.amazon.com/console/) verwenden. (Die meisten dieser Aktionen können auch mit der [AWS CLI](https://aws.amazon.com/cli/) durchgeführt werden). Diese Anleitung führt dich durch die Schritte zur Bereitstellung deiner Website bei AWS und beginnt mit der einfachsten Methode. Anschließend wird gezeigt, wie du zusätzliche Services hinzufügen kannst, um die Kosteneffizienz und Leistung zu verbessern.
 
@@ -126,7 +126,7 @@ Wir werden CloudFront nutzen, um unseren S3-Bucket zu verlinken und die Dateien 
 
 ### CloudFront-Einrichtung
 
-1. Erstelle eine CloudFront-Verteilung mit den folgenden Werten:
+1. Erstelle eine CloudFront-Veröffentlichung mit den folgenden Werten:
     * **Origin domain:** Dein S3-Bucket
     * **S3 bucket access:** "Ja, OAI verwenden (Bucket kann den Zugriff nur auf CloudFront beschränken)" 
     * **Origin access identity:** Eine neue Identität für den Ursprungszugang erstellen
@@ -167,7 +167,7 @@ Leider unterstützt CloudFront standardmäßig kein mehrseitiges `Sub-folder/Ind
 
 Es gibt viele Möglichkeiten, die kontinuierliche Bereitstellung für AWS einzurichten. Eine Möglichkeit für Code, der auf GitHub gehostet wird, ist die Verwendung von [GitHub Actions](https://github.com/features/actions), um deine Website bei jeder Übertragung bereitzustellen.
 
-1. Erstelle in deinem AWS-Konto mit [IAM](https://aws.amazon.com/iam/) eine neue Richtlinie mit den folgenden Berechtigungen. Mit dieser Richtlinie kannst du erstellte Dateien in deinen S3-Bucket hochladen und die CloudFront-Verteilungsdateien ungültig machen, wenn du eine Übertragung durchführst.
+1. Erstelle in deinem AWS-Konto mit [IAM](https://aws.amazon.com/iam/) eine neue Richtlinie mit den folgenden Berechtigungen. Mit dieser Richtlinie kannst du erstellte Dateien in deinen S3-Bucket hochladen und die CloudFront-Veröffentlichungs-Dateien ungültig machen, wenn du eine Übertragung durchführst.
 
     ```json
     {
@@ -230,5 +230,5 @@ Es gibt viele Möglichkeiten, die kontinuierliche Bereitstellung für AWS einzur
     ```
 
     :::note
-    Deine `BUCKET_ID` ist der Name deines S3-Buckets. Deine `DISTRIBUTION_ID` ist die ID deiner CloudFront-Distribution. Du findest deine CloudFront-Verteilungs-ID unter **CloudFront > Verteilungen > ID**
+    Deine `BUCKET_ID` ist der Name deines S3-Buckets. Deine `DISTRIBUTION_ID` ist die ID deiner CloudFront-Distribution. Du findest deine CloudFront-Veröffentlichungs-ID unter **CloudFront > Veröffentlichung > ID**
     :::
