--- a/src/content/docs/de/guides/deploy/buddy.mdx
+++ b/src/content/docs/de/guides/deploy/buddy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Veröffentliche deine Astro-Site mit Buddy
+title: Veröffentliche deine Astro-Seite mit Buddy
 description: Wie du deine Astro-Website mit Buddy im Internet veröffentlichst.
 type: deploy
 i18nReady: true
