--- a/src/content/docs/de/guides/deploy/cleavr.mdx
+++ b/src/content/docs/de/guides/deploy/cleavr.mdx
@@ -1,5 +1,5 @@
 ---
-title: Veröffentliche deine Astro-Site mit Cleavr 
+title: Veröffentliche deine Astro-Seite mit Cleavr 
 description: Wie du deine Astro-Website mit Cleavr auf deinem VPS-Server bereitstellst.
 type: deploy
 i18nReady: true
