--- a/src/content/docs/de/guides/deploy/cloudflare.mdx
+++ b/src/content/docs/de/guides/deploy/cloudflare.mdx
@@ -1,5 +1,5 @@
 ---
-title: Veröffentliche deine Astro-Site auf Cloudflare Pages 
+title: Veröffentliche deine Astro-Seite auf Cloudflare Pages 
 description: Wie du deine Astro-Website mit Cloudflare Pages ins Internet stellst.
 type: deploy
 i18nReady: true
@@ -11,7 +11,7 @@ Diese Anleitung enthält:
 
 - [Wie du über das Cloudflare Pages Dashboard veröffentlichst](#how-to-deploy-a-site-with-git)
 - [Wie man mit Wrangler, dem Cloudflare CLI, veröffentlicht](#how-to-deploy-a-site-using-wrangler)
-- [Wie man eine SSR-Site mit `@astrojs/cloudflare` veröffentlicht](#how-to-deploy-an-ssr-site)
+- [Wie man eine SSR-Seite mit `@astrojs/cloudflare` veröffentlicht](#how-to-deploy-an-ssr-site)
 
 ## Voraussetzungen
 
@@ -71,9 +71,9 @@ Es ist dann möglich, das Vorschauskript zu aktualisieren, um `wrangler` anstell
 "preview": "wrangler pages dev ./dist"
 ```
 
-## Wie man eine SSR-Site veröffentlichst
+## Wie man eine SSR-Seite veröffentlichst
 
-Du kannst eine Astro SSR-Site für den Einsatz auf Cloudflare Pages mit dem [`@astrojs/cloudflare` adapter](/de/guides/integrations-guide/cloudflare/) erstellen.
+Du kannst eine Astro SSR-Seite für den Einsatz auf Cloudflare Pages mit dem [`@astrojs/cloudflare` adapter](/de/guides/integrations-guide/cloudflare/) erstellen.
 
 Befolge die folgenden Schritte, um den Adapter einzurichten. Du kannst dann eine der beiden oben beschriebenen Methoden anwenden.
 
