fix: anchor links

--- a/src/content/docs/de/guides/deploy/cloudflare.mdx
+++ b/src/content/docs/de/guides/deploy/cloudflare.mdx
@@ -9,9 +9,9 @@ Du kannst dein Astro-Projekt auf [Cloudflare Pages](https://pages.cloudflare.com
 
 Diese Anleitung enthält:
 
-- [Wie du über das Cloudflare Pages Dashboard veröffentlichst](#how-to-deploy-a-site-with-git)
-- [Wie man mit Wrangler, dem Cloudflare CLI, veröffentlicht](#how-to-deploy-a-site-using-wrangler)
-- [Wie man eine SSR-Seite mit `@astrojs/cloudflare` veröffentlicht](#how-to-deploy-an-ssr-site)
+- [Wie du über das Cloudflare Pages Dashboard veröffentlichst](#wie-man-eine-website-mit-git-veröffentlicht)
+- [Wie man mit Wrangler, dem Cloudflare CLI, veröffentlicht](#wie-man-eine-website-mit-wrangler-veröffentlicht)
+- [Wie man eine SSR-Seite mit `@astrojs/cloudflare` veröffentlicht](#wie-man-eine-ssr-seite-veröffentlicht)
 
 ## Voraussetzungen
 
@@ -20,7 +20,7 @@ Um loszulegen, brauchst du Folgendes:
 - Ein Cloudflare-Konto. Wenn du noch keins hast, kannst du während des Prozesses ein kostenloses Cloudflare-Konto erstellen.
 - Dein App-Code wird in ein [GitHub](https://github.com/) oder ein [GitLab](https://about.gitlab.com/) Repository gepusht.
 
-## Wie man eine Website mit Git einrichtet
+## Wie man eine Website mit Git veröffentlicht
 
 1. Richte ein neues Projekt auf Cloudflare Pages ein.
 2. Pushe deinen Code in dein Git-Repository (GitHub, GitLab).
@@ -32,7 +32,7 @@ Um loszulegen, brauchst du Folgendes:
     - **Framework-Voreinstellung**: `Astro`
     - **Build-Befehl:** `npm run build`
     - **Build-Ausgabeverzeichnis:** `dist`
-    - **Umgebungsvariablen (erweitert)**: Standardmäßig verwendet Cloudflare Pages Node.js 12.18.0, aber Astro [erfordert eine höhere Version](/de/install/auto/#Voraussetzungen). Füge eine Umgebungsvariable mit einem **Variablennamen** von `NODE_VERSION` und einem **Wert** von `v16.13.0` oder höher hinzu, um Cloudflare anzuweisen, eine kompatible Node-Version zu verwenden. Alternativ kannst du auch eine `.nvmrc`-Datei zu deinem Projekt hinzufügen, um eine Node-Version anzugeben.
+    - **Umgebungsvariablen (erweitert)**: Standardmäßig verwendet Cloudflare Pages Node.js 12.18.0, aber Astro [erfordert eine höhere Version](/de/install/auto/#voraussetzungen). Füge eine Umgebungsvariable mit einem **Variablennamen** von `NODE_VERSION` und einem **Wert** von `v16.13.0` oder höher hinzu, um Cloudflare anzuweisen, eine kompatible Node-Version zu verwenden. Alternativ kannst du auch eine `.nvmrc`-Datei zu deinem Projekt hinzufügen, um eine Node-Version anzugeben.
 
 7. Klicke auf die Schaltfläche **Speichern und bereitstellen**.
 
@@ -71,7 +71,7 @@ Es ist dann möglich, das Vorschauskript zu aktualisieren, um `wrangler` anstell
 "preview": "wrangler pages dev ./dist"
 ```
 
-## Wie man eine SSR-Seite veröffentlichst
+## Wie man eine SSR-Seite veröffentlicht
 
 Du kannst eine Astro SSR-Seite für den Einsatz auf Cloudflare Pages mit dem [`@astrojs/cloudflare` adapter](/de/guides/integrations-guide/cloudflare/) erstellen.
 
