es: i18nReady added

--- a/src/content/docs/es/tutorial/0-introduction/1.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/1.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 title: Acerca de este tutorial
 description: Cómo empezar con el tutorial "Crea tu primer blog Astro.
+i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
