--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: '¡Bienvenido, mundo!'
 title: Construye tu primer Astro Blog
+i18nReady: true
 description: >-
   Aprenda los conceptos básicos de Astro con un tutorial basado en proyectos. Todos los conocimientos
   que necesitas para empezar.
