--- a/src/content/docs/es/tutorial/1-setup/1.mdx
+++ b/src/content/docs/es/tutorial/1-setup/1.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Prepare su entorno de desarrollo
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Instala las herramientas locales que necesitarás para completar el tutorial
