--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Cree su primer proyecto Astro
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Crea un nuevo proyecto para el tutorial de Astro y prepárate para codificar
