--- a/src/content/docs/es/tutorial/1-setup/3.mdx
+++ b/src/content/docs/es/tutorial/1-setup/3.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Escriba su primera línea de Astro
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Realiza las primeras modificaciones en la página de inicio de tu proyecto tutorial
