--- a/src/content/docs/es/tutorial/1-setup/4.mdx
+++ b/src/content/docs/es/tutorial/1-setup/4.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Almacene su repositorio en línea
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Crea un repositorio de GitHub para tu proyecto tutorial
