--- a/src/content/docs/es/tutorial/1-setup/5.mdx
+++ b/src/content/docs/es/tutorial/1-setup/5.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Despliegue de su sitio en la web
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Conecta el repositorio GitHub de tu proyecto tutorial a Netlify y despliégalo en la web
