--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: Cree y despliegue su primer sitio Astro
 title: 'Check in: Unidad 1 - Configuración'
+i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
