--- a/src/content/docs/es/tutorial/2-pages/1.mdx
+++ b/src/content/docs/es/tutorial/2-pages/1.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Cree su primera página Astro
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Añada nuevas páginas a su sitio con enlaces de navegación entre ellas
