--- a/src/content/docs/es/tutorial/2-pages/2.mdx
+++ b/src/content/docs/es/tutorial/2-pages/2.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Escribe tu primer post en Markdown
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Añade páginas Markdown a tu sitio
