--- a/src/content/docs/es/tutorial/2-pages/3.mdx
+++ b/src/content/docs/es/tutorial/2-pages/3.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Añade contenido dinámico sobre ti
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Utilice variables y renderización condicional en sus páginas Astro
