--- a/src/content/docs/es/tutorial/2-pages/4.mdx
+++ b/src/content/docs/es/tutorial/2-pages/4.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Estiliza tu página Acerca de
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Añadir una etiqueta de estilo Astro para el estilo de alcance en la página
