--- a/src/content/docs/es/tutorial/2-pages/5.mdx
+++ b/src/content/docs/es/tutorial/2-pages/5.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Añadir estilo a todo el sitio
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Crear una hoja de estilo global para el estilo de todo el sitio
