--- a/src/content/docs/es/tutorial/3-components/1.mdx
+++ b/src/content/docs/es/tutorial/3-components/1.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Crear un componente de navegación reutilizable
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Sustituir elementos repetidos en varias páginas por un componente reutilizable
