--- a/src/content/docs/es/tutorial/3-components/2.mdx
+++ b/src/content/docs/es/tutorial/3-components/2.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Crear un pie de página para redes sociales
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Cree un nuevo componente desde cero y añádalo a sus páginas
