--- a/src/content/docs/es/tutorial/3-components/3.mdx
+++ b/src/content/docs/es/tutorial/3-components/3.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Constrúyalo usted mismo - Header
+i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
