--- a/src/content/docs/es/tutorial/3-components/4.mdx
+++ b/src/content/docs/es/tutorial/3-components/4.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Envíe su primer script al navegador
+i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
