--- a/src/content/docs/es/tutorial/3-components/index.mdx
+++ b/src/content/docs/es/tutorial/3-components/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: Construcción y diseño con componentes Astro UI
 title: 'Check in: Unidad 3 - Componentes'
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Cree componentes Astro para reutilizar el código de los elementos comunes de su sitio web.
