--- a/src/content/docs/es/tutorial/4-layouts/1.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/1.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Construya su primer layout
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Refactorización de elementos comunes en un diseño de página reutilizable
