--- a/src/content/docs/es/tutorial/4-layouts/2.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/2.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Crear y pasar datos a un layout de blog personalizado
+i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
