--- a/src/content/docs/es/tutorial/4-layouts/3.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/3.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Combine layouts para obtener lo mejor de ambos mundos
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Añade tu layout básico al layout que da formato a los posts de tu blog
