--- a/src/content/docs/es/tutorial/4-layouts/index.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: Ahorre tiempo y energía con layouts de página reutilizables
 title: 'Regístrese: Unidad 4 - Layouts'
+i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
