--- a/src/content/docs/es/tutorial/5-astro-api/1.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/1.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Crear un archivo de entradas de blog
+i18nReady: true
 description: |-
   Tutorial: Construye tu primer blog Astro -
   Utiliza Astro.glob() para acceder a los datos de los archivos de tu proyecto
