--- a/src/content/docs/es/tutorial/5-astro-api/2.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/2.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Generar páginas de etiquetas
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Utilice getStaticPaths() para crear varias páginas (rutas) a la vez
