--- a/src/content/docs/es/tutorial/5-astro-api/3.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/3.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Crear una página index de etiquetas
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Utiliza todo lo que has aprendido hasta ahora para crear una página de índice de etiquetas
