--- a/src/content/docs/es/tutorial/5-astro-api/index.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: Mejora tu blog
 title: 'Check in: Unidad 5 - Astro API'
+i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
