--- a/src/content/docs/es/tutorial/6-islands/1.mdx
+++ b/src/content/docs/es/tutorial/6-islands/1.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: Construye tu primera Astro isla
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Utilice un componente Preact para saludar a sus visitantes con un mensaje seleccionado al azar.
