--- a/src/content/docs/es/tutorial/6-islands/2.mdx
+++ b/src/content/docs/es/tutorial/6-islands/2.mdx
@@ -1,6 +1,7 @@
 ---
 type: tutorial
 title: 'De vuelta a tierra firme. Lleva tu blog del día a la noche, ¡sin necesidad de isla!'
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Crea un toggle de tema claro/oscuro utilizando sólo JavaScript y CSS
