--- a/src/content/docs/es/tutorial/6-islands/index.mdx
+++ b/src/content/docs/es/tutorial/6-islands/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: Zarpar hacia las islas Astro
 title: 'Check in: Unidad 6 - Astro Islas'
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Utiliza las islas Astro para incorporar componentes frontales a tu sitio Astro.
