--- a/src/content/docs/es/tutorial/2-pages/index.mdx
+++ b/src/content/docs/es/tutorial/2-pages/index.mdx
@@ -2,6 +2,7 @@
 type: tutorial
 unitTitle: 'Añadir, estilizar y enlazar páginas en su sitio web'
 title: 'Check in: Unidad 2 - Páginas'
+i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
   Crear, estilizar y enlazar posts a páginas de su sitio web
