i18n(de): translate vercel.mdx

--- a/src/content/docs/de/guides/deploy/netlify.mdx
+++ b/src/content/docs/de/guides/deploy/netlify.mdx
@@ -1,5 +1,5 @@
 ---
-titel: Veröffentliche deine Astro-Site auf Netlify
+title: Veröffentliche deine Astro-Site auf Netlify
 description: Wie du deine Astro-Website auf Netlify im Internet veröffentlichst.
 type: deploy
 i18nReady: true
