fix: anchor links

--- a/src/content/docs/de/guides/deploy/netlify.mdx
+++ b/src/content/docs/de/guides/deploy/netlify.mdx
@@ -111,7 +111,7 @@ Du kannst auch eine neue Website auf Netlify erstellen und dein Git-Repository e
 3. Starte `netlify init` und folge den Anweisungen
 4. Bestätige deinen Build-Befehl (`astro build`)
 
-    Das CLI erkennt automatisch die Build-Einstellungen (`astro build`) und das Veröffentlichungsverzeichnis (`dist`) und bietet an, automatisch [eine `netlify.toml`-Datei](#netlifytoml-file) mit diesen Einstellungen zu erzeugen.
+    Das CLI erkennt automatisch die Build-Einstellungen (`astro build`) und das Veröffentlichungsverzeichnis (`dist`) und bietet an, automatisch [eine `netlify.toml`-Datei](#netlifytoml-datei) mit diesen Einstellungen zu erzeugen.
 
 5. Erstellen und Veröffentlichung durch Pushing zu Git
 
