fixed broken links

--- a/src/content/docs/es/core-concepts/astro-components.mdx
+++ b/src/content/docs/es/core-concepts/astro-components.mdx
@@ -10,7 +10,7 @@ Los componentes de Astro son extremadamente flexibles. Un componente de Astro pu
 
 La más importante que debes saber sobre los componentes de Astro es que **no se renderizan en el cliente**. Se renderizan a HTML ya sea en tiempo de compilación o bajo demanda utilizando [renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/). Puedes incluir código JavaScript dentro del frontmatter de tu componente y todo el código será eliminado de la página final enviada a los navegadores de tus usuarios. El resultado es un sitio más rápido, con cero huella de JavaScript agregada por defecto.
 
-Cuando tu componente Astro necesite interactividad del lado del cliente, puedes agregar [etiquetas `<script>` HTML estándar](/es/guides/client-side-scripts/) o [componentes de UI Framework](/es/core-concepts/framework-components/#hidratación-de-componentes-interactivos).
+Cuando tu componente Astro necesite interactividad del lado del cliente, puedes agregar [etiquetas `<script>` HTML estándar](/es/guides/client-side-scripts/) o [componentes de UI Framework](/es/core-concepts/framework-components/#hidratando-componentes-interactivos).
 
 ## Estructura de un componente
 
