--- a/src/content/docs/es/core-concepts/endpoints.mdx
+++ b/src/content/docs/es/core-concepts/endpoints.mdx
@@ -209,4 +209,4 @@ export async function get({ params, redirect }) {
 };
 ```
 
-**Receta relacionada:** [Usar endpoints del servidor para verificar un CAPTCHA](/es/recetas/captcha/)
+**Receta relacionada:** [Usar endpoints del servidor para verificar un CAPTCHA](/es/recipes/captcha/)
