fix broken links

--- a/src/content/docs/zh-cn/reference/errors/client-address-not-available.mdx
+++ b/src/content/docs/zh-cn/reference/errors/client-address-not-available.mdx
@@ -14,7 +14,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 很遗憾，您所使用的适配器不支持 `Astro.clientAddress`。
 
 **请参阅：**
--  [官方集成](/zh-cn/guides/integrations-guide/#official-integrations)
+-  [官方集成](/zh-cn/guides/integrations-guide/#官方集成)
 -  [Astro.clientAddress](/zh-cn/reference/api-reference/#astroclientaddress)
 
 
