--- a/src/content/docs/zh-cn/reference/errors/no-matching-renderer.mdx
+++ b/src/content/docs/zh-cn/reference/errors/no-matching-renderer.mdx
@@ -17,6 +17,6 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 
 **请参阅：**
 -  [框架组件](/zh-cn/core-concepts/framework-components/)
--  [UI 框架](/zh-cn/guides/integrations-guide/#official-integrations)
+-  [UI 框架](/zh-cn/guides/integrations-guide/#官方集成)
 
 
