--- a/src/content/docs/es/guides/client-side-scripts.mdx
+++ b/src/content/docs/es/guides/client-side-scripts.mdx
@@ -14,7 +14,7 @@ Los scripts pueden ser usados para agregar event listeners, enviar datos de anal
 // src/components/ConfettiButton.astro
 <button data-confetti-button>Celebrate!</button>
 <script>
-  // Importa modulos npm.
+  // Importa módulos npm.
   import confetti from 'canvas-confetti';
   // Encuentra nuestro componente en la página.
   const buttons = document.querySelectorAll('[data-confetti-button]');
