Fix compiler issues url

--- a/src/content/docs/en/reference/errors/unknown-compiler-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-compiler-error.mdx
@@ -18,9 +18,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 ## What went wrong?
 Astro encountered an unknown error while compiling your files. In most cases, this is not your fault, but an issue in our compiler.
 
-If there isn't one already, please [create an issue](https://astro.build/issues/compiler).
+If there isn't one already, please [create an issue](https://github.com/withastro/compiler/issues/new/choose).
 
 **See Also:**
--  [withastro/compiler issues list](https://astro.build/issues/compiler)
+-  [withastro/compiler issues list](https://github.com/withastro/compiler/issues)
 
 
