--- a/src/content/docs/es/reference/errors/unknown-compiler-error.mdx
+++ b/src/content/docs/es/reference/errors/unknown-compiler-error.mdx
@@ -14,8 +14,8 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ## ¿Qué salió mal?
 Astro encontró un error desconocido mientras compilaba tus archivos. En la mayoría de los casos, esto no es culpa tuya, sino un problema en nuestro compilador.
 
-Si no hay uno ya creado, [crea un issue](https://astro.build/issues/compiler).
+Si no hay uno ya creado, [crea un issue](https://github.com/withastro/compiler/issues/new/choose).
 
 **Ver también:**
 
--  [plantilla de issues de compilador/withastro](https://astro.build/issues/compiler)
+-  [plantilla de issues de compilador/withastro](https://github.com/withastro/compiler/issues)
