added missing words

--- a/src/content/docs/pl/concepts/why-astro.mdx
+++ b/src/content/docs/pl/concepts/why-astro.mdx
@@ -20,7 +20,7 @@ Dlaczego wybrać Astro, a nie inny webowy framework? Oto pięć głównych zasad
 
 **Astro zostało zaprojektowane do budowania stron bogatych w treść.** Należą do nich większość stron marketingowych, wydawniczych, dokumentacje, blogi, portfolia oraz niektóre strony e-commerce.
 
-W przeciwieństwie do tego podejścia większość współczesnych webowych frameworków jest zaprojektowana w celu budowania *aplikacji internetowych*. Te frameworki sprawdzają się najlepiej przy tworzeniu bardziej zaawansowanych, przypominających aplikacje, doświadczeń: panele admina, skrzynki odbiorcze, serwisy społecznościowe, listy zadań, a nawet aplikacje podobne do natywnych jak [Figma](https://figma.com/) lub [Ping](https://ping.gg/).
+W przeciwieństwie do tego podejścia większość współczesnych webowych frameworków jest zaprojektowana w celu budowania *aplikacji internetowych*. Te frameworki sprawdzają się najlepiej przy tworzeniu bardziej zaawansowanych, przypominających aplikacje stron, na przykład: panele admina, skrzynki odbiorcze, serwisy społecznościowe, listy zadań, a nawet aplikacje podobne do natywnych jak [Figma](https://figma.com/) lub [Ping](https://ping.gg/).
 
 Jest to jedna z najważniejszych różnic, która pomaga zrozumieć Astro. Unikalny dla Astro nacisk na treść pozwala nam na podejmowanie decyzji, które pomagają dostarczyć niezrównaną wydajność oraz funkcjonalności, których nie miałoby sensu implementować we frameworkach służących do tworzenia aplikacji.
 
