--- a/src/content/docs/ja/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/ja/guides/upgrade-to/v2.mdx
@@ -11,7 +11,7 @@ import FileTree from '~/components/FileTree.astro'
 
 古いプロジェクトからv1へのアップグレードが必要ですか? [古い移行ガイド](/ja/guides/upgrade-to/v1/)をご覧ください。
 
-## Astorをアップグレードする
+## Astroをアップグレードする
 
 パッケージマネージャを使用して、プロジェクトのAstroのバージョンを最新版に更新してください。Astroインテグレーションを使用している場合は、それらも最新バージョンにアップデートしてください。
 
