--- a/src/content/docs/ja/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/ja/guides/upgrade-to/v2.mdx
@@ -310,7 +310,7 @@ export default {
 
 v1.0では、Astroは古いastroFlavored Markdown(Components in Markdownとしても知られている)をレガシ機能へ移行しました。
 
-Astro v2.oでは、`legacy.astroFlavoredMarkdown` オプションは完全に削除されました。`.md`ファイル内のコンポーネントをインポートして使うことはできなくなります。
+Astro v2.0では、`legacy.astroFlavoredMarkdown` オプションは完全に削除されました。`.md`ファイル内のコンポーネントをインポートして使うことはできなくなります。
 
 #### どうすればいいの？
 
