--- a/src/content/docs/ja/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/ja/guides/upgrade-to/v2.mdx
@@ -45,7 +45,7 @@ import FileTree from '~/components/FileTree.astro'
   </Fragment>
 </PackageManagerTabs>
 
-## Astro v2.0の変更点
+## Astro v2.0の互換性のない変更点
 
 Astro v2.0では、いくつかの変更点があり、以前廃止された機能が削除されています。もしv2.0にアップグレードした後、プロジェクトが期待通りに動作しない場合、このガイドですべての変更点の概要とコードベースの更新方法を確認してください。
 
