Fix of the Nginx configuration file.

--- a/src/content/docs/en/recipes/docker.mdx
+++ b/src/content/docs/en/recipes/docker.mdx
@@ -107,7 +107,7 @@ http {
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
-      try_files $uri $uri/ /index.html;
+      try_files $uri $uri/index.html $uri.html;
     }
   }
 }
