remove ImageMetadata typing; refine now types the arg

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -161,12 +161,10 @@ A new `image` helper for content collections lets you validate the image metadat
 
 ```ts title="src/content/config.ts"
 import { defineCollection, z, image } from "astro:content";
-import type { ImageMetadata } from "astro/dist/assets/types";
-
 const blogCollection = defineCollection({
 	schema: z.object({
 		title: z.string(),
-		cover: image().refine((img: ImageMetadata) => img.width >= 1080, {
+		cover: image().refine((img) => img.width >= 1080, {
 			message: "Cover image must be at least 1080 pixels wide!",
 		}),
 		coverAlt: z.string(),
