fix translation and add ui

--- a/src/content/docs/es/tutorial/4-layouts/2.mdx
+++ b/src/content/docs/es/tutorial/4-layouts/2.mdx
@@ -104,7 +104,7 @@ const { frontmatter } = Astro.props;
 ```
 </Box>
 
-:::note[avoid duplication]
+:::note[evitar duplicados]
  Todo lo que se muestre en el layout **no** tiene que escribirse en el post del blog. Si observa alguna duplicación al comprobar la vista previa de su navegador, asegúrese de eliminar el contenido de su archivo Markdown.
  :::
 
